--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "google-id-token-verifier": "^0.2.3",
-    "mongoose": "^5.7.7",
+    "mysql2": "^2.0.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "sequelize": "^5.21.2",
     "simple-crypto-js": "^2.2.0"
   }
 }
